fix: override align-items center for blueprint-group with more specific selector (#208)

--- a/assets/blueprint.css
+++ b/assets/blueprint.css
@@ -172,7 +172,7 @@ ul.quizz svg.icon{display:none;padding-right:.5rem;width:2rem;height:2rem}
 .local_toc ul a{text-decoration:none;color:var(--sbs-text)}
 .local_toc ul li{padding:.2rem 0}
 nav.toc{flex-shrink:0;display:none;width:100%;height:100%;overflow-x:hidden;overflow-y:auto;flex-direction:column;margin-right:1rem;padding:0;padding-right:1rem;transition:left .5s ease;background-color:var(--sbs-accent);border-right:none}
-@media (min-width:1024px){nav.toc{display:flex;max-width:25ch}}
+@media (min-width:1024px){nav.toc{display:flex;max-width:27ch}}
 nav.active{width:100%}
 .toc ul{min-width:100%;padding-left:0;list-style:none}
 .toc ul .sidebar-item{display:inline-block;padding:.35rem .8rem;transition:all .1s ease;text-align:left;text-decoration:none;font-size:0.875rem;line-height:1.4;color:#fff;flex-grow:1;white-space:nowrap}
@@ -184,6 +184,7 @@ nav.active{width:100%}
   list-style: none;
 }
 .toc ul li{display:flex;min-width:100%;align-items:center;flex-wrap:wrap;justify-content:space-between;background-color:var(--sbs-accent)}
+.toc ul li.sidebar-blueprint-group{align-items:stretch}
 .toc ul li.current{background-color:rgba(255, 255, 255, 0.2);font-weight:400}
 .sub-toc-0 .sidebar-item{padding-left:.8rem}
 .sub-toc-1 .sidebar-item{padding-left:1.6rem}
